feat: add more customization
